<resources>
    <string name="app_name">SolarMonitor</string>
    <string name="action_settings">Settings</string>
    <string name="click_to_load_solar_output">Click to load solar output ...</string>
    <string name="loading_solar_output">Loading solar output ...</string>
    <string name="finding_nearby_solar_panel">Finding nearby solar panel ...</string>
    <string name="click_to_find_nearby_solar_panel">Click to find nearby solar panel.</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="error_please_try_again">Error. Please try again.</string>
    <string name="click_to_configure_nearby_panel">Click to configure nearby panel ...</string>
    <string name="configure_panel">Configure Panel</string>
    <string name="enter_customer_id">Customer Id (6 digits)</string>
    <string name="search_for_nearby_panel">Searching for nearby panel ...</string>
    <string name="no_nearby_panels_were_found">No nearby panels were found.</string>
    <string name="using_stored_panel">Using stored panel.</string>
    <string name="search_again">Search Again</string>
    <string name="configuring_nearby_panel">Configuring nearby panel ...</string>
    <string name="failed_to_configure_panel">Failed to configure panel.</string>
    <string name="OK">OK</string>
    <string name="erase_panel">Erase Panel</string>
    <string name="description_is_valid">Description is valid.</string>
    <string name="description_requirements">Description must be between 3 and 20 characters.</string>
    <string name="panel_id_is_valid">PanelId is valid.</string>
    <string name="panel_id_requirements">PanelId must be 6 digits.</string>
</resources>
