...
    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main"
        android:id="@+id/include" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/loadFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_menu_upload" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/scanFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_menu_compass" />

...
